packages/compiler/tests/fixtures/invalid/each-outside-list.svelte
<script>
  let items = [
    { title: "A" },
  ];
</script>
<group>
  {#each items as item}
    <text>{item.title}</text>
  {/each}
</group>
